--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "bulma": "^0.9.1",
+    "contentful": "^8.1.7",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.5.0",
     "next": "^10.0.5",
