--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
     "react-syntax-highlighter": "^15.4.3",
-    "remark-math": "^4.0.0"
+    "remark-math": "^4.0.0",
+    "swr": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
