--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@creativebulma/bulma-divider": "^1.1.0",
     "@matejmazur/react-katex": "^3.1.3",
+    "@types/react-redux": "^7.1.16",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
@@ -26,7 +27,10 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-markdown": "^5.0.3",
+    "react-redux": "^7.2.2",
     "react-syntax-highlighter": "^15.4.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "remark-math": "^4.0.0",
     "swr": "^0.4.0"
   },
